day2-training/starter/solution/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
spec:
  type: ClusterIP
  selector:
    app: todo-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
